fixing responsive alignments

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,20 @@
 @import '../../../assets/styles/generics.scss';
 
 .c-footer{
+
+    @media(max-width: 575px){
+        text-align: center;
+
+        .col-sm-auto{
+            margin-bottom: 30px;
+
+            h3{
+            margin-bottom: 20px;
+
+            }
+        }
+    }
+
     h3{
         margin-bottom: 30px;
     }
@@ -78,4 +92,8 @@
     background-repeat: no-repeat;
     padding-top: 120px;
     background-color:$white;
+
+    @media(max-width: 575px){
+        padding-top: 70px;
+    }
 }
