--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,5 +1,10 @@
 @import '../../../assets/styles/generics.scss';
 
+header{
+    @media(max-width: 992px){
+        margin-top: 0 !important;
+    }
+}
 .c-header{
     text-align: center;
     .header-title{
@@ -19,6 +24,10 @@
     padding-bottom: 60px;
     background-image: url('../../../assets/img/bg-contact.svg');
     position: relative;
+
+    @media(max-width: 575px){
+        padding-top: 30px;
+    }
 }
 
 
@@ -34,6 +43,11 @@
 
     .input-field{
         margin-bottom: 35px;
+    }
+
+    @media(max-width: 575px){
+        padding: 35px 15px 35px;
+        max-width: calc(100% - 30px);
     }
 }
 
