--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -16,6 +16,14 @@
         li {
             margin-right: 1.5rem;
 
+            @media(max-width: 992px){
+                width: 100%;
+                text-align: center;
+                margin-right: 0;
+                font-size: 1rem;
+                padding: 10px;
+            }
+
             a{
                 position: relative;
                 color: $black;
@@ -42,5 +50,24 @@
                 }
             }
         }
+    }
+
+    .navbar-collapse{
+        @media(max-width: 992px){
+            padding-bottom: 15px;
+            box-shadow: rgba(0, 0, 0, 0.176) 0px 6px 12px;
+            border-radius: 0.25rem;
+            width: calc(100% - 30px) !important;
+            margin-right: 0;
+            margin-left: 0;
+            top: -10px;
+            position: relative;
+            padding-top: 15px;
+        }
+    }
+
+    .navbar-toggler{
+        width: 40px;
+        padding: 9px;
     }
 }
